tests/fail/fail_borrow_write.tk
import std/io::println

fn main() -> i32 {
    auto x# = 10
    auto &y = &x
    x# = 20 // Error: x is borrowed by y (immutable borrow still blocks owner write)
    println("y is {}", y)
    return 0
}
